k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-backend
spec:
  selector:
    matchLabels:
      app: homepage
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: homepage
        tier: backend
        track: stable
    spec:
      containers:
        - name: homepage
          image: asmy/homepage-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
