k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage-postgres
  template:
    metadata:
      labels:
        app: homepage-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: homepage-postgres-pv-claim
