k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage-postgres
  labels:
    app: homepage-postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
   app: homepage-postgres
