k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage-backend
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: homepage
    tier: backend
